# Electricity_data_analysis

./: README.md  pyproject.toml
data/: meter_23209887_LP_18-07-2024.csv
electricity_reform/: Power_consumption_analysis.ipynb
