[tool.poetry]
name = "electricity-reform"
version = "0.1.0"
description = "Comparison of electricity consumption by plan"
authors = ["YoavHagashi@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
